--- a/app/src/main/res/layout/activity_fav_event_search_result.xml
+++ b/app/src/main/res/layout/activity_fav_event_search_result.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_fav_event_search"
     android:layout_width="match_parent"
@@ -15,5 +15,14 @@
         android:layout_height="match_parent">
 
     </ListView>
+    <TextView
+        android:id="@+id/fav_event_search_result_no_result_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="无结果"
+        android:textSize="25sp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        />
 
-</LinearLayout>
+</RelativeLayout>
