--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -101,7 +101,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingTop="5sp">
@@ -119,6 +119,7 @@
             <TextView
                 android:id="@+id/event_list_item_follower"
                 android:layout_width="wrap_content"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Followers" />
 
@@ -126,7 +127,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="120dp">
+                android:layout_gravity="end"
+                android:paddingEnd="10sp"
+                android:paddingRight="20sp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -140,7 +143,9 @@
                     android:src="@drawable/ic_favorite_border" />
 
             </LinearLayout>
+
         </LinearLayout>
+
         <!--<com.facebook.drawee.view.SimpleDraweeView-->
         <!--android:id="@+id/event_list_item_avatar"-->
         <!--android:layout_width="64px"-->
