--- a/app/src/main/res/layout/moment_list_item.xml
+++ b/app/src/main/res/layout/moment_list_item.xml
@@ -1,87 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5sp"
-    android:orientation="vertical">
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardCornerRadius="5sp">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:translationZ="10sp"
-        app:cardCornerRadius="5sp"
+        android:orientation="horizontal"
         android:padding="10sp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10sp">
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/moment_list_item_avatar"
+            android:layout_width="80sp"
+            android:layout_height="80sp" />
 
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/moment_list_item_avatar"
-                android:layout_width="80sp"
-                android:layout_height="80sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="5sp">
+
+            <TextView
+                android:id="@+id/moment_list_item_sponsor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sponsor Name"
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="5sp">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/moment_list_item_sponsor"
+                    android:id="@+id/moment_list_item_action"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sponsor Name"
-                    android:textSize="20sp"
-                    android:textStyle="italic" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/moment_list_item_action"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="MomentAction"
-                        android:textSize="15sp" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/moment_list_item_minor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Minor"
-                    android:textStyle="bold"
+                    android:text="MomentAction"
                     android:textSize="15sp" />
 
-                <LinearLayout
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/moment_list_item_minor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Minor"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="10sp">
+
+                <TextView
+                    android:id="@+id/moment_list_item_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="10sp">
+                    android:text="TimeLast" />
 
-                    <TextView
-                        android:id="@+id/moment_list_item_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="TimeLast" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5sp"
+                    android:text="来自" />
 
-                    <TextView
-                        android:id="@+id/moment_list_item_platform"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="5sp"
-                        android:text="platform" />
+                <TextView
+                    android:id="@+id/moment_list_item_platform"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="platform" />
 
-                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
