--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/user_info_parent_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -41,10 +42,79 @@
                 android:text="DummyUserEmail@email.com"
                 android:textSize="15sp" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="5sp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="注册时间:" />
+
+                <TextView
+                    android:id="@+id/user_info_reg_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10sp"
+                    android:text="主页访问数:" />
+
+                <TextView
+                    android:id="@+id/user_info_vis_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:paddingTop="10sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/user_info_follow_club"
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:paddingTop="10sp"
+                    android:foreground="?android:attr/selectableItemBackground">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="我关注的社团" />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_marginTop="10sp"
+                    android:id="@+id/user_info_join_club"
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:foreground="?android:attr/selectableItemBackground">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="我参加的社团" />
+
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
+
             <Button
                 android:id="@+id/user_info_logout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10sp"
                 android:text="@string/user_logout" />
         </LinearLayout>
 
